--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,7 +13,7 @@
 	"spamregex-currently-blocked": "'''Currently blocked phrases:'''",
 	"spamregex-move": "The reason you entered contained a blocked phrase.",
 	"spamregex-no-currently-blocked": "'''There are no blocked phrases.'''",
-	"spamregex-log": "* '''$1''' $2 ([{{SERVER}}$3&text=$4 remove]) added by $5 on $6 at $7",
+	"spamregex-log": "* '''$1''' $2 ([{{SERVER}}$3&text=$4 remove]) added by $5 on $6 at $7 (reason: $8)",
 	"spamregex-page-title-1": "Block phrase using regular expressions",
 	"spamregex-unblock-success": "Unblock succedeed",
 	"spamregex-unblock-message": "Phrase '''$1''' has been unblocked from editing.",
@@ -25,6 +25,8 @@
 	"spamregex-warning-2": "Please check at least one blocking mode.",
 	"spamregex-already-blocked": "\"$1\" is already blocked",
 	"spamregex-phrase-block": "Phrase to block:",
+	"spamregex-reason": "Reason:",
+	"spamregex-error-no-reason": "You need to provide a reason for blocking a phrase!",
 	"spamregex-phrase-block-text": "block phrase in page text",
 	"spamregex-phrase-block-summary": "block phrase in summary",
 	"spamregex-block-submit": "Block&nbsp;this&nbsp;phrase",
