i18n tweaks requested by Sam
Change-Id: I29d6e078756bf5560834bac356bc5891e90717aa

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -30,8 +30,9 @@
 	"spamregex-phrase-block-text": "block phrase in page text",
 	"spamregex-phrase-block-summary": "block phrase in summary",
 	"spamregex-block-submit": "Block&nbsp;this&nbsp;phrase",
-	"spamregex-text": "(Text)",
-	"spamregex-summary-log": "(Summary)",
+	"spamregex-text": "(text)",
+	"spamregex-text-and-summary-log": "(text, summary)",
+	"spamregex-summary-log": "(summary)",
 	"action-spamregex": "block spam phrases",
 	"right-spamregex": "Block spam phrases through [[Special:SpamRegex]]"
 }
