Add missing qqq message documentation
Activate banana checker

Change-Id: I5d90de07952aea41c9a32a23fcae9ee52f9e4d39

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -7,10 +7,35 @@
 			"The Evil IP address"
 		]
 	},
-	"spamregex-desc": "{{desc}}",
+	"spamregex": "{{name}}",
+	"spamregex-desc": "{{desc|name=SpamRegex|url=https://www.mediawiki.org/wiki/Extension:SpamRegex}}",
+	"spamregex-error-unblocking": "Used as text on Special:SpamRegex",
+	"spamregex-summary": "Used as summary on Special:SpamRegex",
+	"spamregex-intro": "Used as intro on Special:SpamRegex",
+	"spamregex-page-title": "Used as page title on Special:SpamRegex",
+	"spamregex-currently-blocked": "Used as header for a list",
+	"spamregex-move": "Currently unused",
+	"spamregex-no-currently-blocked": "Used as hint for a empty list",
 	"spamregex-log": "Parameters:\n* $1 is spam text\n* $2 is a description\n* $3 is an unblock link\n* $4 is the IP address to be unblocked\n* $5 is a username\n* $6 is a date\n* $7 is a time",
+	"spamregex-page-title-1": "Used as page title on Special:SpamRegexList",
+	"spamregex-unblock-success": "Used as sub title on Special:SpamRegexList",
+	"spamregex-unblock-message": "Used as text on Special:SpamRegexList",
+	"spamregex-page-title-2": "Used as page title on form for blocking phrases",
+	"spamregex-block-success": "Used as sub title on form for blocking phrases",
+	"spamregex-block-message": "Used as text on form for blocking phrases",
+	"spamregex-warning-1": "Used as error message",
+	"spamregex-error-1": "Used as error message",
+	"spamregex-warning-2": "Used as error message",
 	"spamregex-already-blocked": "{{Identical|$1 is already blocked}}",
+	"spamregex-phrase-block": "Used as table header on Special:SpamRegex",
+	"spamregex-reason": "Used as table header on Special:SpamRegex",
+	"spamregex-error-no-reason": "Used as error message",
+	"spamregex-phrase-block-text": "Used as label on Special:SpamRegex",
+	"spamregex-phrase-block-summary": "Used as label on Special:SpamRegex",
+	"spamregex-block-submit": "Used as text for submit button on Special:SpamRegex",
 	"spamregex-text": "{{Identical|Text}}",
+	"spamregex-text-and-summary-log": "{{Identical|Text}}{{Identical|Summary}}",
 	"spamregex-summary-log": "{{Identical|Summary}}",
+	"action-spamregex": "{{doc-action|spamregex}}",
 	"right-spamregex": "{{doc-right|spamregex}}"
 }
